--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
   "require": {
     "patchwork/utf8": "1.2.*",
     "psr/log": "1.*",
-    "psr/http-message": "^1.",
+    "psr/http-message": "1.*",
     "container-interop/container-interop": "1.*"
   },
   "require-dev": {
